# xpu_runtime

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  temp.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
cmake/: FindOnnxRuntime.cmake  FindTensorRT.cmake
docs/: 00_overview.md  01_architecture.md  03_python_binding.md  04_inference_module.md  07_build_packaging.md  CURRENT_ARCHITECTURE.md  gpu_npu_execution_runtime_design.md
docs/completed/: README.md
docs/issues/: issue_draft_flash_attention_windows.md
docs/plans/: 02_cpp_core_runtime.md  05_training_module.md  06_kernel_policy.md  08_testing_strategy.md
docs/tasks/: README.md  TASK_001_project_scaffold.md  TASK_002_cpp_core_skeleton.md  TASK_003_python_binding.md  TASK_004_device_manager.md  TASK_005_memory_manager.md  TASK_006_stream_manager.md  TASK_007_kernel_registry.md  TASK_008_ort_integration.md  TASK_009_tensorrt_integration.md  TASK_010_inference_session.md  TASK_011_pytorch_extension.md  TASK_012_kernel_policy_apply.md  TASK_013_cicd_setup.md  TASK_014_pypi_publish.md  task_log.md
examples/: intel_gpu_openvino_demo.py
src/cpp/: CMakeLists.txt
src/cpp/bindings/: device_binding.cpp  exception_binding.cpp  memory_binding.cpp  module.cpp
src/cpp/core/: backend_registry.cpp  device_manager.cpp  dispatcher.cpp  exceptions.cpp  kernel_registry.cpp  memory_manager.cpp  profiler.cpp  stream_manager.cpp  version.cpp
src/cpp/include/xpuruntime/: common.h  config.hpp  device_manager.h  dispatcher.h  exceptions.h  kernel_registry.h  memory_manager.h  profiler.h  stream_manager.h
src/cpp/include/xpuruntime/backends/: ibackend.h
src/python/xpuruntime/: __init__.py
src/python/xpuruntime/inference/: __init__.py  openvino_backend.py
src/python/xpuruntime/policies/: __init__.py
src/python/xpuruntime/runtime/: __init__.py  device.py
src/python/xpuruntime/training/: __init__.py
tests/cpp/: CMakeLists.txt  test_core.cpp  test_device_manager.cpp
tests/python/: test_device.py  test_version.py
